metronic responsive layout issues

--- a/inetpub/wwwroot/ServicesMvc/assets/css/style-responsive.css
+++ b/inetpub/wwwroot/ServicesMvc/assets/css/style-responsive.css
@@ -13,7 +13,7 @@
 /***
 Large notebooks and desktops
 ***/
- @media (min-width: 1080px) { 
+ @media (min-width: 1280px) { 
 
  	/***
  	Page sidebar
@@ -48,7 +48,7 @@ Large notebooks and desktops
 /***
 For tablets and phones
 ***/
-@media (max-width:1079px) { 
+@media (max-width:1279px) { 
 	
 	/***
 	Body
